--- a/package.json
+++ b/package.json
@@ -10,18 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cookie-session": "^1.4.0",
-    "ejs": "^3.1.5",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
+    "cookie-session": "^1.4.0",
     "css-loader": "^3.6.0",
-    "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-router-dom": "^5.2.0",
-    "style-loader": "^1.2.1",
-    "webp-loader": "^0.6.0",
+    "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "loadash": "^1.0.0",
@@ -29,7 +22,15 @@
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
-    "socket.io": "^2.3.0"
+    "prop-types": "^15.7.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.1",
+    "style-loader": "^1.2.1",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
