--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -6,21 +6,21 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
+    "css-loader": "^3.6.0",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.0",
-    "socket.io-client": "^3.0.1",
-    "uuid": "^8.3.1",
-    "web-vitals": "^0.2.4",
-    "axios": "^0.19.2",
-    "css-loader": "^3.6.0",
-    "prop-types": "^15.7.2",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
+    "regenerator-runtime": "^0.13.7",
+    "socket.io-client": "^3.0.1",
     "style-loader": "^1.2.1",
-    
+    "uuid": "^8.3.1",
+    "web-vitals": "^0.2.4",
     "webp-loader": "^0.6.0"
   },
   "devDependencies": {
@@ -40,8 +40,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "webpack --mode development --watch ./src/index.js --output ../../server/static/main.js",
-    "prod": "webpack --mode production ./src/index.js --output ../../server/static/main.js"
+    "dev": "webpack --mode development --watch ./src/index.js --output ../server/static/main.js",
+    "prod": "webpack --mode production ./src/index.js --output ../server/static/main.js"
   },
   "eslintConfig": {
     "extends": [
