--- a/server/package.json
+++ b/server/package.json
@@ -11,20 +11,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1",
-    "socket.io": "^3.0.1",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.5.0",
     "css-loader": "^3.6.0",
+    "ejs": "^3.1.5",
+    "express": "^4.17.1",
+    "lodash": "^4.17.20",
+    "mongoose": "^5.10.14",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
+    "socket.io": "^3.0.1",
     "style-loader": "^1.2.1",
-    "webp-loader": "^0.6.0",
-    "ejs": "^3.1.5",
-    "lodash": "^4.17.20"
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
