--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-toastify": "^6.1.0",
     "regenerator-runtime": "^0.13.7",
     "socket.io-client": "^3.0.1",
     "style-loader": "^1.2.1",
