--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^5.2.0",
     "socket.io": "^3.0.1",
     "style-loader": "^1.2.1",
+    "uuid": "^8.3.1",
     "webp-loader": "^0.6.0"
   },
   "devDependencies": {
