--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "dev": "webpack --mode development --watch ./CLIENT/src/index.js --output node node ./CLIENT/templates/static/main.js",
-    "build": "webpack --mode production ./CLIENT/src/index.js --output ./CLIENT/templates/static/main.js"
+    "build": "webpack --mode production ./CLIENT/src/index.js --output ./CLIENT/templates/static/main.js",
+    "start":"node app.js"
   },
   "keywords": [],
   "author": "",
