--- a/CLIENT/package.json
+++ b/CLIENT/package.json
@@ -6,25 +6,25 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-icons": "^3.11.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.0",
-    "styled-components": "^5.2.1",
-    "web-vitals": "^0.2.4",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.0",
     "css-loader": "^3.6.0",
     "prop-types": "^15.7.2",
-    "react-redux": "^7.2.0",
-    "style-loader": "^1.2.1",
-    "webp-loader": "^0.6.0",
+    "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
+    "react-icons": "^3.11.0",
+    "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.0",
     "react-toastify": "^6.1.0",
     "regenerator-runtime": "^0.13.7",
     "socket.io-client": "^3.0.1",
-    "uuid": "^8.3.1"
+    "style-loader": "^1.2.1",
+    "styled-components": "^5.2.1",
+    "uuid": "^8.3.1",
+    "web-vitals": "^0.2.4",
+    "webp-loader": "^0.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.4",
